--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "node-fetch": "^2.6.0",
         "nodemon": "1.12.0",
         "npm-run-all": "4.1.1",
+        "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-helmet": "5.2.0",
