--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "shivangiupadhyay",
     "license": "ISC",
     "dependencies": {
+        "@material-ui/core": "^4.11.0",
         "babel-cli": "6.26.0",
         "babel-core": "6.26.0",
         "babel-loader": "7.1.2",
@@ -21,6 +22,7 @@
         "babel-preset-es2017": "6.24.1",
         "babel-preset-react": "6.24.1",
         "babel-preset-stage-0": "6.24.1",
+        "bootstrap": "^4.5.2",
         "compression": "^1.7.4",
         "concurrently": "3.5.0",
         "express": "^4.17.1",
